<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/icon_scanbarcode"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_scan" />
    <item
        android:id="@+id/action_deleteall"
        android:icon="@drawable/ic_delete_2"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_deleteall" />
    <!-- More -->
    <item
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/action_setting1"
                android:icon="@drawable/ic_action_settings"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_settings"></item>
            <item
                android:id="@+id/action_Sync"
                android:icon="@drawable/ic_sync_item"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_Sync"></item>
            <item
                android:id="@+id/action_GetDep_for_Offline"
                android:icon="@drawable/cloud_download_blue"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_Download_Dep_Offline"></item>
            <item
                android:id="@+id/action_exit"
                android:icon="@drawable/ic_exit_menu"
                android:showAsAction="ifRoom|withText"
                android:title="@string/Logout"></item>
        </menu>
    </item>
    <!-- Refresh -->
</menu>
