<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_bg"
    android:orientation="vertical"
    tools:context="com.jwetherell.quick_response_code.GlobalSetting.PopupChangePassword">


    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/popup_changePass_lblTitle"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#FFF"></TableRow>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/popup_changepass_lblUsername"
            android:id="@+id/textView6" />

        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/popup_changepass_lblUsername" />

    </LinearLayout>

    <EditText
        android:layout_marginBottom="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/popup_changepass_txtPassword"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext"
        android:id="@+id/popup_changepass_txtPassword" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/popup_changepass_txtConfirmPassword"
        android:ems="10"
        android:background="@drawable/edittext"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/popup_changepass_txtConfirmPassword" />

    <Button
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/buttonlogin"
        android:text="@string/popup_changepassword_btnChangenow"
        android:id="@+id/popup_changepass_btnChangeNow" />

</LinearLayout>
