<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.jwetherell.quick_response_code.SettingChangePassword">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="right"
        android:background="@drawable/setting_bg"
        android:orientation="vertical">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/ChangePasswordSetting_lbl_Title"
                android:textStyle="bold"
                android:id="@+id/textView"
                android:paddingTop="10dp" />
        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ChangePasswordSetting_lbl_UserName"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/Setting_lbl_UserName_ChangePass"
                    android:text="user name"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="25dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ChangePasswordSetting_lbl_oldpassword"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/ChangePasswordSetting_hint_enterOldpass"
                    android:ems="10"
                    android:id="@+id/settingChangepass_txt_Oldpass"
                    android:layout_marginTop="5dp" />
            </LinearLayout>
        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="25dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ChangePasswordSetting_lblNewPassword"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/ChangePasswordSetting_hint_newpassword"
                    android:ems="10"
                    android:id="@+id/settingChangepass_txt_Newpass"
                    android:layout_marginTop="5dp" />
            </LinearLayout>
        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="25dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ChangePasswordSetting_lbl_ConfirmPassword"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/ChangePasswordSetting_hint_RetypePassword"
                    android:ems="10"
                    android:id="@+id/settingChangepass_txt_Retype"
                    android:layout_marginTop="5dp" />
            </LinearLayout>
        </TableRow>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_Setting_changepassword"
                android:layout_width="148dp"
                android:layout_height="50dp"
                android:background="@drawable/buttonlogin"
                android:layout_marginRight="4dp"
                android:text="@string/Setting_btnChangePassword"
                android:textSize="20sp"
                android:textColor="#FFFFFF"/>
            <Button
                android:id="@+id/btn_Setting_Goback"
                android:layout_width="148dp"
                android:layout_height="50dp"
                android:background="@drawable/buttonlogin"
                android:text="@string/Setting_btn_Changepass_Goback"
                android:textSize="20sp"
                android:textColor="#FFFFFF"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
